@@ -43,8 +43,10 @@ settings_add_item=Add Item
 settings_add_fluid=Add Fluid
 settings_add_technology=Add Research
 message_loaded_presets=[img=milestones_main_icon_white] [font=default-large-bold]Milestones[/font] is using the auto-detected preset: [color=green]__1__[/color]. Change it in the settings (__CONTROL__milestones_toggle_gui__).
+message_loaded_preset_addons_singular=[img=milestones_main_icon_white] Also added milestones from this mod: [color=green]__1__[/color].
+message_loaded_preset_addons_plural=[img=milestones_main_icon_white] Also added milestones from these mods: [color=green]__1__[/color].
 message_reloaded_presets_singular=[img=milestones_main_icon_white] [font=default-large-bold]Milestones[/font] found a new preset: [color=green]__1__[/color]. Go to settings to use it (__CONTROL__milestones_toggle_gui__).
-message_reloaded_presets_plural=[img=milestones_main_icon_white] [font=default-large-bold]Milestones[/font]` found new presets: [color=green]__1__[/color]. Go to settings to use one (__CONTROL__milestones_toggle_gui__).
+message_reloaded_presets_plural=[img=milestones_main_icon_white] [font=default-large-bold]Milestones[/font] found new presets: [color=green]__1__[/color]. Go to settings to use one (__CONTROL__milestones_toggle_gui__).
 message_settings_changed=[img=milestones_main_icon_white] [font=default-large-bold]Milestones[/font] settings changed! Completion times were backfilled as best as possible.
 message_milestone_reached_item_first=[img=milestones_main_icon_white] [font=default-large-bold]Created the first [color=green][img=__1__]__2__[/color] at [color=green]__3__[img=quantity-time][/color]![/font]
 message_milestone_reached_item_more=[img=milestones_main_icon_white] [font=default-large-bold]Created [color=green]__1__ [img=__2__]__3__[/color] at [color=green]__4__[img=quantity-time][/color]![/font]
