@@ -1,7 +1,9 @@
 ---------------------------------------------------------------------------------------------------
 Version: 1.0.4
 Date: ????
-  Changes:
+  Features:
+    - Add preset addons: Small mods that can be used with any other major mod can now have preset milestones, which will be detected and added at the end of the major mod preset.
+    - Add Power Armor Mk3 preset addon
 ---------------------------------------------------------------------------------------------------
 Version: 1.0.3
 Date: 2021-06-27
